--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,18 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_OAUTH_ID=""
+GITHUB_REDIRECT_URI=""
+GITHUB_OAUTH_SECRET=""
+GITHUB_OAUTH_SCOPES=""
+
+TWITCH_OAUTH_ID=""
+TWITCH_REDIRECT_URI=""
+TWITCH_OAUTH_SECRET=""
+TWITCH_OAUTH_SCOPES=""
+
+SPOTIFY_OAUTH_ID=""
+SPOTIFY_OAUTH_SCOPES=""
+SPOTIFY_OAUTH_SECRET=""
+SPOTIFY_REDIRECT_URI=""
